--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Parsha, Graphic Designer and this is my first webapp
+            Hi! I am Parsha, Graphic Designer <br> and this is my first webapp
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
